<resources>
    <!-- app strings -->
    <string name="app_name">StudyGuider</string>
    <string name="app_name_title" translatable="false">STUDYGUIDER</string>

    <!-- main string -->
    <string name="btn_login_main">log in</string>
    <string name="btn_sign_up_main">cadastro</string>

    <!-- btn form string -->
    <string name="btn_sing_up_form">SING UP</string>
    <string name="btn_login_form">SIGN IN</string>

    <!-- form string -->
    <string name="presentation_form">Enter your details</string>
    <string name="btn_crate_user_form">Create your account</string>
    <string name="forgetPasswordLogin">Forgot your password?</string>

    <!-- hint form strings -->
    <string name="hint_email" translatable="false">E-Mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_date">Date of birth</string>

    <!-- navbar string -->
    <string name="name_user_navbar">User</string>

    <!--about us string-->
    <string name="about_us_page_title">About Us</string>
    <string name="about_us_page_text_description_devs">A group of students from the Industrial Technical College - Prof. Isaac Portal Roldán (CTI), Anna Clara, Beatriz, Eduarda, Eduardo, Giovanna, Jenyffer and Vitória, who decided to innovate by creating an application that facilitated the organization of school students in the face of a large workload and diverse tasks. The project went through numerous stages in the year 2024 until reaching the final result and starting to help with the school organization of countless students.</string>

    <!--Menu string-->
    <string name="menu_page_to_do_list">TO-DO LIST</string>
    <string name="menu_page_planner">PLANNER</string>
    <string name="menu_page_subjects">SUBJECTS</string>
    <string name="menu_page_absence">ABSENCE</string>
    <string name="menu_page_emotional">EMOTIONAL</string>
    <string name="menu_page_school_duty">SCHOOL DUTY</string>
    <string name="menu_page_grades">SCHOOL GRADES</string>
    <string name="menu_page_recovery">RECOVERY</string>
    <string name="menu_page_about_us">ABOUT US</string>


    <!--Profile string-->
    <string name="profile_page_title">Profile</string>
    <string name="loading_lbl_profile">Loading</string>
    <string name="btn_log_out">Log out</string>
    <string name="name_profile">NAME:</string>
    <string name="e_mail_profile" translatable="false">E-MAIL:</string>
    <string name="date_of_birth_profile">BIRTHDAY:</string>
    <string name="recovery_profile">RECOVERY:</string>
    <string name="absence_profile">ABSENCE:</string>

    <!--Dialog forgot string-->
    <string name="dialog_forgot_title">Forgot password</string>
    <string name="dialog_forgot_text">Enter your email</string>
    <string name="dialog_forgot_cancel">Cancel</string>
    <string name="dialog_forgot_reset">Reset</string>

    <!--To-Do string-->
    <string name="hint_to_do_list">Enter a new task</string>
    <string name="btn_add_to_do_list">To add</string>
    <string name="btn_select_all_to_do_list">Select all</string>
    <string name="btn_del_to_do_list">Delete</string>

    <!--Emotional Calendar string-->
    <string name="month_emotional_calendar">Month</string>
    <string name="question_emotional_calendar">How was your day?</string>
    <string name="question_option_good_emotional_calendar">Good</string>
    <string name="question_option_bad_emotional_calendar">Bad</string>
    <string name="question_option_normal_emotional_calendar">Normal</string>
    <string name="question_option_terrible_emotional_calendar">Terrible</string>
    <string name="question_option_excellent_emotional_calendar">Excellent</string>

    <!-- Shifts string-->
    <string name="delete_button" translatable="false">Remover item</string>
    <string name="password_form_button" translatable="false">Editar item</string>
    <string name="back_button_description" translatable="false">Voltar</string>

</resources>
