<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <!-- Caixa de diálogo para esquecer a senha -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_forget_password"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Título esquecia a senha -->
        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_dark"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/dialog_forgot_title"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- pedindo entrada do e-mail -->
        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dialog_forgot_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/emailBox"
            app:layout_constraintTop_toBottomOf="@+id/forgotTitle" />

        <!-- Campo de entrada de email -->
        <EditText
            android:id="@+id/emailBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/black"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotTitle" />

        <!-- Botão para cancelar -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/dialog_forgot_cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailBox" />

        <!-- Botão para redefinir a senha -->
        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/dialog_forgot_reset"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Fim da caixa de diálogo -->

</androidx.constraintlayout.widget.ConstraintLayout>
