<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_blue"
    tools:context=".view.ToDoListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="416dp"
        android:layout_height="85dp"
        android:background="@color/blue_dark"
        android:paddingTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_img" />

        <TextView
            android:id="@+id/txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="289dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:text="usuário"
            android:textColor="#FFFFFF"
            android:transitionName="txtUsuario"
            app:layout_constraintEnd_toStartOf="@+id/imgPerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="335dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_user"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rnd_corners_to_do_list"
        android:hint="@string/hint_to_do_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ListView
        android:id="@+id/item_list"
        android:layout_width="378dp"
        android:layout_height="415dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/ct_background_to_do_list"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        app:layout_constraintVertical_bias="0.168" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue_dark"
        android:padding="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/bg_bnt_to_do_list"
            android:text="@string/btn_add_to_do_list" />

        <Button
            android:id="@+id/btn_select_all"
            android:layout_width="128dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_bnt_to_do_list"
            android:layout_marginStart="16dp"
            android:text="@string/btn_select_all_to_do_list" />

        <Button
            android:id="@+id/btn_delete_selected"
            android:layout_width="103dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_bnt_to_do_list"
            android:layout_marginStart="16dp"
            android:text="@string/btn_del_to_do_list" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>