<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".view.AboutUsActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/blue_dark"
        android:paddingTop="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="68dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@drawable/logo_img" />

        <TextView
            android:id="@+id/txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="90dp"
            android:text="@string/name_user_navbar"
            android:textColor="@color/white"
            android:fontFamily="@font/yeseva_one"
            android:textStyle="bold"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/img_user" />
    </FrameLayout>

    <!-- Título fora do container -->
    <TextView
        android:id="@+id/lblTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/yeseva_one"
        android:text="@string/about_us_page_title"
        android:textColor="@color/blue_dark"
        android:textSize="26dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <View
        android:id="@+id/view"
        android:layout_width="360dp"
        android:layout_height="481dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ct_background_about_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTittle" />

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/img_devs"
        android:layout_width="305dp"
        android:layout_height="186dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_devs_about_us"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="317dp"
        android:layout_height="230dp"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_medium"
        android:justificationMode="inter_word"
        android:padding="10dp"
        android:text="@string/about_us_page_text_description_devs"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/img_devs" />

</androidx.constraintlayout.widget.ConstraintLayout>
